fixed weather results not showing, button type changed to button

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
     margin-right: 1rem;
   }
   
-  button[type="submit"] {
+  button[type="button"] {
     background-color: #4CAF50;
     color: white;
     padding: 1rem 2rem;
@@ -50,6 +50,10 @@ body {
     border-radius: 5px;
     cursor: pointer;
     font-size: 1.2rem;
+  }
+
+  p {
+    font-size: x-small;
   }
   
   main {
@@ -72,7 +76,7 @@ body {
    display: flex;
    justify-content: space-evenly;
    border-style: groove;
-   border-color: black;
+   border-color: orange;
    background: navy;
    padding: 2%;
    border-radius: 5px;
@@ -80,8 +84,9 @@ body {
 
 .card {
   border-style: ridge;
-  border-color: #ff3def;
-  background: white;
+  border-color: white;
+  background: #ff3def;
   padding: 2%;
   border-radius: 5px;
+  color: white;
 }
